<?xml version="1.0"?>
<package format="3">
  <name>rm_interface</name>
  <version>0.0.0</version>
  <description>Interface definitions for rm project</description>
  <maintainer email="3288538388@qq.com">ld</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建接口文件所需 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <!-- 运行时依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 声明为接口包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 测试 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
